--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="msg-container hide">
+        <p id="msg"> Winner </p>
+        <button id="new-btn">New Game</button>
+    </div>
     <main>
         <h1>Tic-Tac-Toe</h1>
         <div class="container">
             <div class="game">
-                <button class="box">X</button>
-                <button class="box">O</button>
+                <button class="box"></button>
+                <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
@@ -22,6 +26,8 @@
                 <button class="box"></button>
             </div>
         </div>
+        <button id="reset-btn">Reset Game</button>
     </main>
+    <script src="app.js"></script>
 </body>
 </html>
